# hello-tf

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
hello/: pubspec.yaml
hello/ios/Runner/: Info.plist
hello/ios/Runner.xcodeproj/: project.pbxproj
hello/lib/: main.dart
proto/: infer.proto
pys/: gen_model.py  infer_client.py  infer_local.py  infer_pb2.py  infer_pb2_grpc.py  process_server.py  request
pys/resnet50/: saved_model.pb
pys/resnet50/variables/: variables.index
src/: infer.rs  lib.rs
