[package]
name = "hello-tf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = "0.16.1"
tokio = { version = "1.12", features = ["full"] }
tonic = "0.6"
prost = "0.9"
async-trait = "0.1"
axum = { version = "0.3", features=["multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.1", features = ["trace"] }

serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.6"
